--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,9 @@
-INDEX
+<h1 style="text-align: center">Welcome!</h1>
+
+<p class="overview">EDGEGATE is an E-Learning platform making it easier than ever for young minds to achieve skills that will prepare them for a world where Computer Science and Technology is becoming ever more prevalent.  Our goal is to provide students the means to learn these valuable skills without the need for fancy, expensive schooling.</p>
+<p class="overview">EDGEGATE is here to provide students with an education in Computer Science.  Through the E-Learning platform you will be able to watch lecture videos from qualified instructors, complete programming assignments and projects, and prepare for technial interviews.  This platform is not trying to replace our current education system but to broaden it to meet the educational needs of all so that those less fortunate can stay ahead of the curve.</p>
+<p class="overview">We hope you will enjoy this experience, now lets get started on your first course!</p>
+
+<div class="wrapper">
+    <button type="submit" class="button">Start</button>
+</div>
