--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>EDGECATE</title>
+        <title>EDGEGATE</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel="stylesheet" href="/css/welcome.css">
     </head>
     <body>
+        <div id="navBar" class="topNav">
+            <h1>EDGEGATE</h1>
+            {{#if isAuthenticated}}
+                <a href="/logout">Logout</a>
+                <a href="/users/profile">Profile</a>
+            {{else}}
+                <a href="/login">Login</a>
+            {{/if}}
+            <a href="/courses">Courses</a>
+            <a href="/">Home</a>
+        </div>
         {{{body}}}
     </body>
 </html>
