--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,5 @@
-<h2>EDGEGATE</h2>
-	
-<p>This is where you login. Don't have a login? 
-    <button onclick="document.getElementById('id1').style.display='block'"><u>Signup</u></button>.
+<p>Don't have a login? 
+    <button onclick="document.getElementById('id1').style.display='block'"><u>Register</u></button>.
 It's free.</p>
 
 {{#if errors}}
@@ -12,7 +10,7 @@ It's free.</p>
     </ul>
 {{/if}}
 
-<form method="POST" action="/users/login">
+<form method="POST" action="/login">
     <div id="id0" class="login_container">
         <label><b>Email</b></label>
         <input type="text" name="lg_email" required>
@@ -23,32 +21,31 @@ It's free.</p>
     <button type="submit">Login</button>
 </form>
 
-
 <div class="w3-container">
     <div id="id1" class="w3-modal w3-animate-opacity">
         <div class="w3-modal-content w3-card-4">
             <header class="w3-container w3-teal"> 
                 <span onclick="document.getElementById('id1').style.display='none'" class="w3-button w3-large w3-display-topright">&times;</span>
-                <h2>signup</h2>
+                <h2>Register</h2>
             </header>
-            <form method="POST" action="/users/register">
+            <form method="POST" action="/register">
                 <div class="w3-container">
                     <br><br>
                     <label><b>Full Name*</b></label>
-                    <input type="text" name="su_fullname" required>
+                    <input type="text" name="reg_fullname" required>
                     <br><br>
                     <label><b>Email*</b></label>
-                    <input type="text" name="su_email" required>
+                    <input type="text" name="reg_email" required>
                     <br><br>
                     <label><b>Password*</b></label>
-                    <input type="Password" name="su_pw" required>
+                    <input type="Password" name="reg_pw" required>
                     <br><br>
                     <label><b>Confirm Password*</b></label>
-                    <input type="Password" name="su_repeat_pw" required>
+                    <input type="Password" name="reg_repeat_pw" required>
                     <br><br>
                 </div>
                 <button type="button" onclick="document.getElementById('id1').style.display='none'" class="cancelButton">Cancel</button>
-                <button type="submit" class="signupbtn">Sign Up</button>
+                <button type="submit" class="Registerbtn">Register</button>
             </form>
         </div>
     </div>
