--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -28,6 +28,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/logout">Logout</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/help">Help</a>
+              </li>
               {{else}}
               <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
