added the projects route

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -18,10 +18,10 @@
               <li class="nav-item">
                 <a class="nav-link" href="/courses">Courses</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/projects">Projects</a>
-              </li>
               {{#if isAuthenticated}}
+              <li class="nav-item">
+                <a class="nav-link" href="/users/projects">Projects</a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="/users/profile">Profile</a>
               </li>
