fixed projects path in index.handlebars

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,7 +22,7 @@
 {{#if isAuthenticated}}
 <div class="text-center">
   <p>Your current project is: </p>
-  <a role="button" class="btn btn-lg btn-success" href="/projects/{{currentProject.id}}">Go! ></a>
+  <a role="button" class="btn btn-lg btn-success" href="/users/projects/{{currentProject.id}}">Go! ></a>
 </div>
 <hr>
 {{/if}}
