--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,3 +55,11 @@
     margin-left: 15%;
     margin-right: 15%;
 }
+
+.navbar-brand{
+    border-radius: .25rem;
+}
+
+.nav-link{
+    border-radius: .25rem;
+}
