--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -9,27 +9,27 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="/">EDGEGATE</a>
+          <a id="home" class="navbar-brand" href="/">EDGEGATE</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                <a class="nav-link" href="/courses">Courses</a>
+                <a id="courses" class="nav-link" href="/courses">Courses</a>
               </li>
               {{#if isAuthenticated}}
               <li class="nav-item">
-                <a class="nav-link" href="/users/projects">Projects</a>
+                <a id="projects" class="nav-link" href="/users/projects">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/users/profile">Profile</a>
+                <a id="profile" class="nav-link" href="/users/profile">Profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/logout">Logout</a>
+                <a id="help" class="nav-link" href="/help">Help</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/help">Help</a>
+                <a id="logout" class="nav-link" href="/logout">Logout</a>
               </li>
               {{else}}
               <li class="nav-item">
