--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -4,20 +4,53 @@
         <title>EDGEGATE</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <link rel="stylesheet" href="/css/welcome.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+        <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
-        <div id="navBar" class="topNav">
-            <h1>EDGEGATE</h1>
-            {{#if isAuthenticated}}
-                <a href="/logout">Logout</a>
-                <a href="/users/profile">Profile</a>
-            {{else}}
-                <a href="/login">Login</a>
-            {{/if}}
-            <a href="/courses">Courses</a>
-            <a href="/">Home</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a id="home" class="navbar-brand" href="/">EDGEGATE</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <a id="courses" class="nav-link" href="/courses">Courses</a>
+              </li>
+              {{#if isAuthenticated}}
+              <li class="nav-item">
+                <a id="projects" class="nav-link" href="/users/projects">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a id="lessons" class="nav-link" href="/lessons">Lessons</a>
+              </li>
+              <li class="nav-item">
+                <a id="profile" class="nav-link" href="/users/profile">Profile</a>
+              </li>
+              <li class="nav-item">
+                <a id="help" class="nav-link" href="/help">Help</a>
+              </li>
+              <li class="nav-item">
+                <a id="logout" class="nav-link" href="/logout">Logout</a>
+              </li>
+              {{else}}
+              <li class="nav-item">
+                <a class="nav-link" href="/login">Login</a>
+              </li>
+              {{/if}}
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+          </div>
+        </nav>
+        <div class="container">
+            {{{body}}}
         </div>
-        {{{body}}}
     </body>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </html>
