--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -23,11 +23,9 @@
                 <a id="projects" class="nav-link" href="/users/projects">Projects</a>
               </li>
               <li class="nav-item">
-
-                <a id="lessons" class="nav-link" href="/lessons">Lessons</a>
+                <a id="lessons" class="nav-link" href="/users/lessons">Lessons</a>
               </li>
               <li class="nav-item">
-
                 <a id="profile" class="nav-link" href="/users/profile">Profile</a>
               </li>
               <li class="nav-item">
