--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,12 +7,8 @@
 <hr>
 <div class="text-center">
   {{#if isAuthenticated}}
-    {{#if currentCourse.started }}
-  <p>Lets get started on your course: {{currentCourse.name}}</p>
-    {{else}}
-  <p>Lets continue with your course: {{currentCourse.name}}</p>
-    {{/if}}
-    <a role="button" class="btn btn-lg btn-primary" href="/courses/{{currentCourse.id}}">Start ></a>
+  <p>Lets continue with your lesson: {{currentLecture.name}}</p>
+    <a role="button" class="btn btn-lg btn-primary" href="/courses/{{currentLecture.id}}">Start ></a>
   {{else}}
   <p>Log in to get started!</p>
   <a role="button" class="btn btn-lg btn-success" href="/login">Log in ></a>
@@ -21,7 +17,7 @@
 <hr>
 {{#if isAuthenticated}}
 <div class="text-center">
-  <p>Your current project is: </p>
+  <p>Your current project is: {{currentProject.name}}</p>
   <a role="button" class="btn btn-lg btn-success" href="/users/projects/{{currentProject.id}}">Go! ></a>
 </div>
 <hr>
